Add description in README and index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <body>
         <h1>Rock Paper Scissors Game</h1>
+        <p>Your results will be shown in <strong>developer tools</strong>.</p>
     </body>
 
 </html>
