Add buttons that play a round when clicked
The results are displayed in the paragraph

--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
     <head>
         <meta charset="UTF-8">
         <title>Rock Paper Scissors</title>
-        <script src="./script.js"></script>
+        <script src="./script.js" defer></script>
     </head>
 
     <body>
-        <h1>Rock Paper Scissors Game</h1>
-        <p>Your results will be shown in <strong>developer tools</strong>.</p>
+
+        <h1>Rock, Paper, Scissors</h1>
+
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+
+        <div id="results">
+            <p id="round-result"></p>
+            <p id="score"></p>
+        </div>
+
     </body>
 
 </html>
