Add results data (rounds, round's result, score)

--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
 
     <body>
 
-        <h1>Rock, Paper, Scissors</h1>
+        <h1>Rock, Paper, Scissors (Камень, ножницы, бумага)</h1>
+        <p>Win, who get 5 points first! (Победит тот, кто первый наберет 5 очков)</p>
 
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
+        <button id="rock">Rock (камень)</button>
+        <button id="paper">Paper (бумага)</button>
+        <button id="scissors">Scissors (ножницы)</button>
 
         <div id="results">
+            <p id="which-round"></p>
             <p id="round-result"></p>
             <p id="score"></p>
+            <p id="result"></p>
         </div>
 
     </body>
