Add footer and hovering effect on title and buttons

--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
             </div>            
         </div>
 
-
+        <footer>
+            <div>
+                <a href="https://github.com/simokhin"><img src="./images/github-mark.png" id="github-logo"></a>
+                <a href="https://github.com/simokhin" id="github-link">GitHub</a>
+            </div>
+        </footer>
     </body>
 
 </html>
