Make site  more responsive with CSS adjustments

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Rock Paper Scissors</title>
+
+        <link rel="stylesheet" href="./reset.css">
         <link rel="stylesheet" href="./style.css">
         
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +23,7 @@
             </div>
             
         </header>
-        <div class="content">
+        <main>
 
             <p class="desc">
                 Win, who get <strong>5 points</strong> first! (Победит тот, кто первый наберет <strong>5 очков</strong>)<br>
@@ -42,7 +44,7 @@
                 <p id="score"></p>
                 <p id="result"></p>
             </div>            
-        </div>
+        </main>
 
         <footer>
             <div>
